# pysatl-mpest

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  em.py  mm.py  pyproject.toml  requirements.txt  results.IPYNB  run_test.py  script_stage_1.py  script_stage_2.py  script_stage_3.py  simple.txt  simple.txttest.txtresult_0.txt  simple.txttest.txtresult_1.txt  simple.txttest.txtresult_10.txt  simple.txttest.txtresult_2.txt  simple.txttest.txtresult_3.txt  simple.txttest.txtresult_4.txt  simple.txttest.txtresult_5.txt  simple.txttest.txtresult_6.txt  simple.txttest.txtresult_7.txt  simple.txttest.txtresult_8.txt  simple.txttest.txtresult_9.txt  test_gen.py
em_algo/: __init__.py  distribution.py  distribution_mixture.py  distributions_mixture.py  em.py  mixture_distribution.py  models.py  optimizer.py  problem.py  types.py  utils.py
examples/: big_exponential_test.py  big_mono_tests.py  big_weibull_gauss_test.py  config.py  diff_test.py  exponential_gauss_test.py  mono_test_generator.py  prepare_result.py  quick_em_algo_tests.ipynb  quick_test.py  results_accumulation.ipynb  results_accumulation_2.ipynb  results_accumulation_big_test.ipynb  results_accumulation_diff_test.ipynb  utils.py
experimental_env/: example.ipynb  utils.py
mpest/: __init__.py  annotations.py  distribution.py  exceptions.py  mixture_distribution.py  problem.py  types.py  utils.py
readme_example/: example.py
scripts/: run.py  run_tests.py  shared.py
src/: distribution.py  em.py  models.py  optimizer.py  utils.py
tests/: big_exponential_test.py  big_weibull_gauss_test.py  config.py  em_algo_tests.ipynb  exponential_gauss_test.py  quick_em_algo_tests.ipynb  (+11 more)
(+128 files in other folders)
