[project]
name = "mpest"
version = "0.1.0"
description = "Parameter estimation of mixture distribution problem solver, based on EM algorithm"
keywords = ["EM algorithm", "mixture distribution", "parameter estimation"]
authors = [
    {name = "ToxaKaz", email = "anton.a.kazancev@gmail.com"},
    {name = "iraedeus", email = "dtotjmyanin@mail.ru"}
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.1.0"
ruff = "^0.9.6"
mypy = "==1.13.0"
sphinx = "^8.2.0"

[tool.poetry.group.experiments.dependencies]
tqdm = "^4.67.1"
multiprocess = "^0.70.17"
ruamel-yaml = "^0.18.10"


[tool.ruff]
line-length = 120
output-format = "grouped"
exclude = ["*.ipynb", "__init__.py"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]


[tool.mypy]
files = ["mpest", "experimental_env"]
ignore_missing_imports = true
exclude = ["^mpest/utils.py"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
